version 2.1-rc0	 XX-Jan-2013
. [3RD] JS Bindings: Updated to v0.5

version 2.1-beta4  4-Dec-2012
. [NEW] FileUtils: Supports iPhone5 resources (-wide, -widehd)
		Option to search "resolution resources" in "resolution directores", instead of using "resolution suffixes".
		Option to search resources in different subdirectories (good for themes, cache, etc.)
		Add method to search resources not associated with any resolution (ideal for music, shaders, etc.)
. [FIX] From cocos2d v1.1-rc0:
		Animate Action: Works as expected when display frame rate > than FPS (issue #1438)
. [FIX] Actions: Fixed CCRotateTo, startAngleX now is modded similar to startAngleY to keep the rotation values the same
. [FIX] CocosDenshion: Mute can be called before loading a file (issue #1434)
		By default it uses cocos2d fileutils. Define CD_USE_OWN_FILEUTILS to use CD fileutils
. [FIX] Director: fps_images.png is no longer needed. It uses the image from a header file
. [FIX] LabelBMFont: Fixed bug with newlines and fixed width labels
. [FIX] Layer: LayerMultiplex can be created with an NSArray
		ivars use '_' as suffix, not preffix
. [FIX] MenuItem: block is no longer released at cleanup. To do so, enable the "releaseBlockAtCleanup" property
		ivars use '_' as suffix, not preffix
. [FIX] Templates: sets the Directors delta-time to 0 when the Application Controller become active
. [FIX] Tests: Box2dTestBed: Using new API for touches/accelerometer
		JS tests are using a new repo: cocos2d-js-tests
. [FIX] TileMaps:  Fix firstGID parser issue for new version TMX file with external TSX file
. [FIX] Transitions: Fixed possible memory leak in some tranitions
		Events are enabled/disabled at onEnter/onExit preventing possible bugs
. [FIX] Particles: "unscheduleUpdate" is no longer called at dealloc time
. [FIX] PhysicsSprite: Can be scaled up/down. AnchorPoint works OK.
. [3RD] JS Bindings: Updated to v0.4. Chipmunk-JS + cocos2d-html5 is compatible with cocos2d/chipmunk + JSB